@@ -195,6 +195,10 @@ class GtkInstallProgressAdapter(InstallProgress):
     def error(self, pkg, errormsg):
         InstallProgress.error(self, pkg, errormsg)
         logging.error("got an error from dpkg for pkg: '%s': '%s'" % (pkg, errormsg))
+	# we do not report followup errors from earlier failures
+        if gettext.dgettext('dpkg', "dependency problems - leaving unconfigured") in errormsg:
+	  return False
+
         #self.expander_terminal.set_expanded(True)
         self.parent.dialog_error.set_transient_for(self.parent.window_main)
         summary = _("Could not install '%s'") % pkg
