@@ -6,6 +6,9 @@ update-manager (1:0.91.7) UNRELEASED; urgency=low
       more clear (LP: #229508)
   * DistUpgrade/DistUpgradeApport.py:
     - only run apport-{gtk,qt} if DISPLAY is set
+  * DistUpgrade/DistUpgradeView{Gtk,KDE}.py:
+    - do not show a error dialog for folloup errors from
+      earlier errors (thanks to Alexander Sack for the report)
   
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 02 Jul 2008 13:10:56 +0200
 
